# grafana-calendar-annotator

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md
grafana-calendar-annotator/: cli.py
grafana_calendar_annotator/: cli.py
src/: cli.py  main.py
