[tool.poetry]
name = "grafana-calendar-annotator"
version = "0.1.1"
description = "Generate Grafana Annotations from calendar events"
authors = ["Cam <camerond.barts@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "grafana_calendar_annotator"}]
repository = "https://github.com/cam-barts/grafana-calendar-annotator"
keywords = ["grafana", "monitoring", "annotations", "calendar", "ics", "ical"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
    "Environment :: Console",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cam-barts/grafana-calendar-annotator/issues"
"Contributing" = "https://github.com/cam-barts/grafana-calendar-annotator/blob/main/CONTRIBUTING.md"
"Code Of Conduct" = "https://github.com/cam-barts/grafana-calendar-annotator/blob/main/CODE_OF_CONDUCT.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
python-decouple = "^3.6"
ics = "^0.7.2"
rich-click = "^1.5.2"

[tool.poetry.group.dev.dependencies]
rich = "^12.6.0"
pre-commit = "^2.20.0"
commitizen = "^2.35.0"
bandit = "^1.7.4"

[tool.poetry.scripts]
grafana-calendar-annotator = 'src.cli:cli'

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.1"
tag_format = "$version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
